modified the dockerfiles, make scripts and supervisor for the docker, updated the logic in PRG for light-siren status

--- a/bin/supervisord-mrp.conf
+++ b/bin/supervisord-mrp.conf
@@ -91,6 +91,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 command=./M_SnmpEngine
 directory=/mmitss
 priority=1
+autostart=true
 redirect_stderr=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
@@ -99,6 +100,7 @@ stdout_logfile_maxbytes=0
 command=./M_MapEngine
 directory=/mmitss
 priority=2
+autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0
@@ -107,6 +109,7 @@ stdout_logfile_maxbytes=0
 command=./M_WirelessMsgDecoder
 directory=/mmitss
 priority=3
+autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
@@ -115,6 +118,7 @@ stdout_logfile_maxbytes=0
 command=./M_MsgEncoder
 directory=/mmitss
 priority=4
+autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
@@ -123,6 +127,7 @@ stdout_logfile_maxbytes=0
 command=./M_MapSpatBroadcaster
 directory=/mmitss
 priority=5
+autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
@@ -131,6 +136,7 @@ stdout_logfile_maxbytes=0
 command=./M_PriorityRequestSolver
 directory=/mmitss
 priority=6
+autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0
@@ -139,6 +145,7 @@ stdout_logfile_maxbytes=0
 command=./M_PriorityRequestServer
 directory=/mmitss
 priority=7
+autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
@@ -147,6 +154,7 @@ stdout_logfile_maxbytes=0
 command=./M_TrajectoryAware
 directory=/mmitss
 priority=8
+autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0
@@ -155,6 +163,7 @@ stdout_logfile_maxbytes=0
 command=./M_TrafficControllerInterface
 directory=/mmitss
 priority=9
+autostart=false
 stopsignal=INT
 redirect_stderr=true          
 stdout_logfile=/nojournal/bin/log/tciLog.txt        
@@ -163,6 +172,7 @@ stdout_logfile=/nojournal/bin/log/tciLog.txt
 command=./M_SystemPerformanceDataCollector
 directory=/mmitss
 priority=10
+autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
