--- a/bin/dockerfiles/arm/Dockerfile-vsp.arm
+++ b/bin/dockerfiles/arm/Dockerfile-vsp.arm
@@ -9,6 +9,7 @@ COPY MsgEncoder/arm/M_MsgEncoder /mmitss
 COPY HostBsmDecoder/arm/M_HostBsmDecoder /mmitss
 COPY PriorityRequestGenerator/arm/M_PriorityRequestGenerator /mmitss
 COPY SystemPerformanceDataCollector/arm/M_SystemPerformanceDataCollector /mmitss
+COPY LightSirenStatusManager/arm/M_LightSirenStatusManager /mmitss
 
 COPY supervisord-vsp.conf /mmitss/supervisord.conf
 CMD ["/usr/bin/supervisord"]
