--- a/bin/supervisord-vsp.conf
+++ b/bin/supervisord-vsp.conf
@@ -91,6 +91,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 command=./M_HostBsmDecoder
 directory=/mmitss
 priority=1
+autostart=true
 redirect_stderr=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
@@ -99,6 +100,7 @@ stdout_logfile_maxbytes=0
 command=./M_WirelessMsgDecoder
 directory=/mmitss
 priority=2
+autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
@@ -107,6 +109,7 @@ stdout_logfile_maxbytes=0
 command=./M_MsgEncoder
 directory=/mmitss
 priority=3
+autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
@@ -115,6 +118,7 @@ stdout_logfile_maxbytes=0
 command=./M_PriorityRequestGenerator
 directory=/mmitss
 priority=4
+autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
@@ -122,7 +126,17 @@ stdout_logfile_maxbytes=0
 [program: M_SystemPerformanceDataCollector]
 command=./M_SystemPerformanceDataCollector
 directory=/mmitss
-priority=10
+priority=5
+autostart=true
+redirect_stderr=true          
+stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=0 
+
+[program: M_LightSirenStatusManager]
+command=./M_LightSirenStatusManager
+directory=/mmitss
+priority=6
+autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
