Setup dockerfiles and supervisor for system-interface

--- a/Dockerfile.arm_base
+++ b/Dockerfile.arm_base
@@ -40,6 +40,8 @@ RUN mkdir /mmitss
 
 RUN mkdir -p /mmitss/map
 
+RUN mkdir -p /mmitss/system-interface
+
 WORKDIR /mmitss
 
 # Environment variables
