--- a/bin/supervisord-mrp.conf
+++ b/bin/supervisord-mrp.conf
@@ -177,6 +177,15 @@ redirect_stderr=true
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
 
+[program: M_SystemInterface]
+command=python system-interface.py
+directory=/mmitss/system-interface
+priority=11
+autostart=true
+redirect_stderr=true          
+stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=0 
+
 ; The below sample eventlistener section shows all possible
 ; eventlistener subsection values, create one or more 'real'
 ; eventlistener: sections to be able to handle event notifications
