updated the message distributor ip and added missing fields and passenger vehicles

--- a/bin/corridors/simulation-tools/nojournal/bin/mmitss-message-distributor-config.json
+++ b/bin/corridors/simulation-tools/nojournal/bin/mmitss-message-distributor-config.json
@@ -1,11 +1,11 @@
 {
     "package_drop_probability": 0,
-    "raw_bsm_logging": true,   
+    "raw_bsm_logging": false,   
     "intersections": [
         {
             "name": "DaisyMountain_GavilanPeak",
             "ip_address": "10.12.6.3",
-            "bsm_client_port": 5001,
+            "bsm_client_port": 20001,
             "srm_client_port": 20002,
             "dsrc_range_Meter": 500,
             "position": {
@@ -17,7 +17,7 @@
         {
             "name": "DaisyMountain_DedicationTrail",
             "ip_address": "10.12.6.6",
-            "bsm_client_port": 5001,
+            "bsm_client_port": 20001,
             "srm_client_port": 20002,
             "dsrc_range_Meter": 500,
             "position": {
@@ -29,7 +29,7 @@
         {
             "name": "DaisyMountain_MeridianDrive",
             "ip_address": "10.12.6.9",
-            "bsm_client_port": 5001,
+            "bsm_client_port": 20001,
             "srm_client_port": 20002,
             "dsrc_range_Meter": 500,
             "position": {
@@ -41,7 +41,7 @@
         {
             "name": "DaisyMountain_HastingsWay",
             "ip_address": "10.12.6.12",
-            "bsm_client_port": 5001,
+            "bsm_client_port": 20001,
             "srm_client_port": 20002,
             "dsrc_range_Meter": 500,
             "position": {
@@ -53,7 +53,7 @@
         {
             "name": "DaisyMountain_MemorialDrive",
             "ip_address": "10.12.6.15",
-            "bsm_client_port": 5001,
+            "bsm_client_port": 20001,
             "srm_client_port": 20002,
             "dsrc_range_Meter": 500,
             "position": {
@@ -65,7 +65,7 @@
         {
             "name": "DaisyMountain_AnthemWay",
             "ip_address": "10.12.6.18",
-            "bsm_client_port": 5001,
+            "bsm_client_port": 20001,
             "srm_client_port": 20002,
             "dsrc_range_Meter": 500,
             "position": {
@@ -96,6 +96,10 @@
             }
         ],
         "passenger":[
+            {
+                "ip_address": "10.12.6.20",
+                "port":20022
+            }
         ]
     },
     "map_clients":
