--- a/bin/dockerfiles/arm/Dockerfile-vsp.arm
+++ b/bin/dockerfiles/arm/Dockerfile-vsp.arm
@@ -10,6 +10,7 @@ COPY HostBsmDecoder/arm/M_HostBsmDecoder /mmitss
 COPY PriorityRequestGenerator/arm/M_PriorityRequestGenerator /mmitss
 COPY SystemPerformanceDataCollector/arm/M_SystemPerformanceDataCollector /mmitss
 COPY LightSirenStatusManager/arm/M_LightSirenStatusManager /mmitss
+COPY LightSirenStatusManager/images /mmitss
 
 COPY supervisord-vsp.conf /mmitss/supervisord.conf
 CMD ["/usr/bin/supervisord"]
