--- a/bin/supervisord-mrp.conf
+++ b/bin/supervisord-mrp.conf
@@ -15,8 +15,8 @@ file=/tmp/supervisor.sock   ; (the path to the socket file)
 ;username=user              ; (default is no username (open server))
 ;password=123               ; (default is no password (open server))
 
-;[inet_http_server]         ; inet (TCP) server disabled by default
-;port=127.0.0.1:9001        ; (ip_address:port specifier, *:port for all iface)
+[inet_http_server]         ; inet (TCP) server disabled by default
+port=*:9001        ; (ip_address:port specifier, *:port for all iface)
 ;username=user              ; (default is no username (open server))
 ;password=123               ; (default is no password (open server))
 
@@ -178,7 +178,7 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0 
 
 [program: M_SystemInterface]
-command=python system-interface.py
+command=python M_SystemInterface.py
 directory=/mmitss/system-interface
 priority=11
 autostart=true
