--- a/bin/supervisord-mrp.conf
+++ b/bin/supervisord-mrp.conf
@@ -173,6 +173,7 @@ command=./M_SystemPerformanceDataCollector
 directory=/mmitss
 priority=10
 autostart=true
+stopsignal=INT
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
