--- a/bin/supervisord-vsp.conf
+++ b/bin/supervisord-vsp.conf
@@ -128,6 +128,7 @@ command=./M_SystemPerformanceDataCollector
 directory=/mmitss
 priority=5
 autostart=true
+stopsignal=INT
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
