updated the supervisor to log console output of PRG

--- a/bin/supervisord-vsp.conf
+++ b/bin/supervisord-vsp.conf
@@ -119,9 +119,10 @@ command=./M_PriorityRequestGenerator
 directory=/mmitss
 priority=4
 autostart=true
+stopsignal=INT
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+stdout_logfile=/nojournal/bin/log/PRG_ConsoleLog.txt       
+
 
 [program: M_SystemPerformanceDataCollector]
 command=./M_SystemPerformanceDataCollector
