Add fixed IP addresses to supervisord.conf files and add using host ip to python script

--- a/bin/corridors/Anthem_field/Daisy-Dedication/nojournal/bin/supervisord.conf
+++ b/bin/corridors/Anthem_field/Daisy-Dedication/nojournal/bin/supervisord.conf
@@ -9,14 +9,14 @@
 ;  - Comments must have a leading space: "a=b ;comment" not "a=b;comment".
 
 [unix_http_server]
-file=/var/run/supervisor.sock   ; (the path to the socket file)
+file=/tmp/supervisor.sock   ; (the path to the socket file)
 ;chmod=0700                 ; socket file mode (default 0700)
 ;chown=nobody:nogroup       ; socket file uid:gid owner
 ;username=user              ; (default is no username (open server))
 ;password=123               ; (default is no password (open server))
 
 [inet_http_server]         ; inet (TCP) server disabled by default
-port=localhost:9001        ; (ip_address:port specifier, *:port for all iface)
+port=10.12.6.6:9001        ; (ip_address:port specifier, *:port for all iface)
 ;username=user              ; (default is no username (open server))
 ;password=123               ; (default is no password (open server))
 
@@ -45,7 +45,7 @@ minprocs=200                 ; (min. avail process descriptors;default 200)
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
+serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;serverurl=http://127.0.0.1:9001 ; use an http:// url to specify an inet socket
 ;username=chris              ; should be same as http_username if set
 ;password=123                ; should be same as http_password if set
@@ -87,8 +87,8 @@ serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 ;environment=A="1",B="2"       ; process environment additions (def no adds)
 ;serverurl=AUTO                ; override serverurl computation (childutils)
 
-[program: M_HostBsmDecoder]
-command=./M_HostBsmDecoder
+[program: M_SnmpEngine]
+command=./M_SnmpEngine
 directory=/mmitss
 priority=1
 autostart=true
@@ -96,10 +96,19 @@ redirect_stderr=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 
+[program: M_MapEngine]
+command=./M_MapEngine
+directory=/mmitss
+priority=2
+autostart=true
+redirect_stderr=true          
+stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=0
+
 [program: M_WirelessMsgDecoder]
 command=./M_WirelessMsgDecoder
 directory=/mmitss
-priority=2
+priority=3
 autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
@@ -108,23 +117,14 @@ stdout_logfile_maxbytes=0
 [program: M_MsgEncoder]
 command=./M_MsgEncoder
 directory=/mmitss
-priority=3
-autostart=true
-redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
-
-[program: M_PriorityRequestGenerator]
-command=./M_PriorityRequestGenerator
-directory=/mmitss
 priority=4
 autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
 
-[program: M_SystemPerformanceDataCollector]
-command=./M_SystemPerformanceDataCollector
+[program: M_MapSpatBroadcaster]
+command=./M_MapSpatBroadcaster
 directory=/mmitss
 priority=5
 autostart=true
@@ -132,10 +132,46 @@ redirect_stderr=true
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
 
-[program: M_LightSirenStatusManager]
-command=./M_LightSirenStatusManager
+[program: M_PriorityRequestSolver]
+command=./M_PriorityRequestSolver
 directory=/mmitss
 priority=6
+autostart=true
+redirect_stderr=true          
+stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=0
+
+[program: M_PriorityRequestServer]
+command=./M_PriorityRequestServer
+directory=/mmitss
+priority=7
+autostart=true
+redirect_stderr=true          
+stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=0 
+
+[program: M_TrajectoryAware]
+command=./M_TrajectoryAware
+directory=/mmitss
+priority=8
+autostart=true
+redirect_stderr=true          
+stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=0
+
+[program: M_TrafficControllerInterface]
+command=./M_TrafficControllerInterface
+directory=/mmitss
+priority=9
+autostart=false
+stopsignal=INT
+redirect_stderr=true          
+stdout_logfile=/nojournal/bin/log/tciLog.txt        
+
+[program: M_SystemPerformanceDataCollector]
+command=./M_SystemPerformanceDataCollector
+directory=/mmitss
+priority=10
 autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
@@ -144,7 +180,7 @@ stdout_logfile_maxbytes=0
 [program: M_SystemInterface]
 command=./M_SystemInterface
 directory=/mmitss
-priority=7
+priority=11
 autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
