--- a/bin/supervisord-mrp.conf
+++ b/bin/supervisord-mrp.conf
@@ -16,7 +16,7 @@ file=/tmp/supervisor.sock   ; (the path to the socket file)
 ;password=123               ; (default is no password (open server))
 
 [inet_http_server]         ; inet (TCP) server disabled by default
-port=*:9001        ; (ip_address:port specifier, *:port for all iface)
+port=localhost:9001        ; (ip_address:port specifier, *:port for all iface)
 ;username=user              ; (default is no username (open server))
 ;password=123               ; (default is no password (open server))
 
@@ -178,8 +178,8 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0 
 
 [program: M_SystemInterface]
-command=python M_SystemInterface.py
-directory=/mmitss/system-interface
+command=./M_SystemInterface
+directory=/mmitss
 priority=11
 autostart=true
 redirect_stderr=true          
