--- a/bin/corridors/vehicle/nojournal/bin/supervisord.conf
+++ b/bin/corridors/vehicle/nojournal/bin/supervisord.conf
@@ -15,8 +15,8 @@ file=/var/run/supervisor.sock   ; (the path to the socket file)
 ;username=user              ; (default is no username (open server))
 ;password=123               ; (default is no password (open server))
 
-[inet_http_server]         ; inet (TCP) server disabled by default
-port=localhost:9001        ; (ip_address:port specifier, *:port for all iface)
+[inet_http_server]          ; inet (TCP) server disabled by default
+port=10.12.6.1:9001         ; (ip_address:port specifier, *:port for all iface)
 ;username=user              ; (default is no username (open server))
 ;password=123               ; (default is no password (open server))
 
@@ -142,8 +142,8 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0 
 
 [program: M_SystemInterface]
-command=./M_SystemInterface
-directory=/mmitss
+command=python M_SystemInterface.py
+directory=/mmitss/system-interface
 priority=7
 autostart=true
 redirect_stderr=true          
