--- a/bin/dockerfiles/x86/Dockerfile.x86
+++ b/bin/dockerfiles/x86/Dockerfile.x86
@@ -3,14 +3,17 @@
 #-----------------------------------------------------------------------------#
 FROM mmitssuarizona/mmitss-x86-base:1.0
 
-COPY ./../WirelessMsgDecoder/x86/M_WirelessMsgDecoder /mmitss
-COPY ./../TrafficControllerInterface/x86/M_TrafficControllerInterface /mmitss
-COPY ./../PriorityRequestSolver/x86/M_PriorityRequestSolver /mmitss
-COPY ./../PriorityRequestServer/x86/M_PriorityRequestServer /mmitss
-COPY ./../SnmpEngine/x86/M_SnmpEngine /mmitss
-COPY ./../MsgEncoder/x86/M_MsgEncoder /mmitss
-COPY ./../MapSpatBroadcaster/x86/M_MapSpatBroadcaster /mmitss
+COPY WirelessMsgDecoder/x86/M_WirelessMsgDecoder /mmitss
+COPY TrafficControllerInterface/x86/M_TrafficControllerInterface /mmitss
+COPY PriorityRequestSolver/x86/M_PriorityRequestSolver /mmitss
+COPY PriorityRequestServer/x86/M_PriorityRequestServer /mmitss
+COPY SnmpEngine/x86/M_SnmpEngine /mmitss
+COPY MsgEncoder/x86/M_MsgEncoder /mmitss
+COPY MapSpatBroadcaster/x86/M_MapSpatBroadcaster /mmitss
+COPY TrajectoryAware/arm/M_TrajectoryAware /mmitss
+COPY MapEngine/arm/M_MapEngine /mmitss
+COPY SystemPerformanceDataCollector/arm/M_SystemPerformanceDataCollector /mmitss
+COPY SystemInterface/arm/M_SystemInterface /mmitss
 
-COPY supervisord.conf /mmitss
-CMD ["/usr/bin/supervisord"]
+CMD ["/usr/bin/supervisord -c /nojournal/bin/supervisord.conf"]
 
