--- a/bin/dockerfiles/x86/Dockerfile.x86
+++ b/bin/dockerfiles/x86/Dockerfile.x86
@@ -10,10 +10,10 @@ COPY PriorityRequestServer/x86/M_PriorityRequestServer /mmitss
 COPY SnmpEngine/x86/M_SnmpEngine /mmitss
 COPY MsgEncoder/x86/M_MsgEncoder /mmitss
 COPY MapSpatBroadcaster/x86/M_MapSpatBroadcaster /mmitss
-COPY TrajectoryAware/arm/M_TrajectoryAware /mmitss
-COPY MapEngine/arm/M_MapEngine /mmitss
-COPY SystemPerformanceDataCollector/arm/M_SystemPerformanceDataCollector /mmitss
-COPY SystemInterface/arm/M_SystemInterface /mmitss
+#COPY TrajectoryAware/x86/M_TrajectoryAware /mmitss
+COPY MapEngine/x86/M_MapEngine /mmitss
+COPY SystemPerformanceDataCollector/x86/M_SystemPerformanceDataCollector /mmitss
+COPY SystemInterface/x86/M_SystemInterface /mmitss
 
 CMD ["/usr/bin/supervisord -c /nojournal/bin/supervisord.conf"]
 
