Fix supervisor not starting

--- a/bin/dockerfiles/arm/Dockerfile-mrp.arm
+++ b/bin/dockerfiles/arm/Dockerfile-mrp.arm
@@ -16,5 +16,5 @@ COPY MapEngine/arm/M_MapEngine /mmitss
 COPY SystemPerformanceDataCollector/arm/M_SystemPerformanceDataCollector /mmitss
 COPY SystemInterface/arm/M_SystemInterface /mmitss
 
-CMD ["/usr/bin/supervisord -c /nojournal/bin/supervisord.conf"]
+ENTRYPOINT ["/usr/bin/supervisord", "--configuration=/nojournal/bin/supervisord.conf"]
 
