--- a/bin/corridors/vehicle/nojournal/bin/supervisord.conf
+++ b/bin/corridors/vehicle/nojournal/bin/supervisord.conf
@@ -142,8 +142,8 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0 
 
 [program: M_SystemInterface]
-command=python M_SystemInterface.py
-directory=/mmitss/system-interface
+command=./M_SystemInterface
+directory=/mmitss
 priority=7
 autostart=true
 redirect_stderr=true          
