--- a/bin/corridors/Anthem_field/Daisy-Hastings/nojournal/bin/supervisord.conf
+++ b/bin/corridors/Anthem_field/Daisy-Hastings/nojournal/bin/supervisord.conf
@@ -169,6 +169,15 @@ redirect_stderr=true
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
 
+[program: M_V2XDataCollector]
+command=./M_V2XDataCollector
+directory=/mmitss
+priority=12
+autostart=true
+redirect_stderr=true          
+stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=0 
+
 ; The below sample eventlistener section shows all possible
 ; eventlistener subsection values, create one or more 'real'
 ; eventlistener: sections to be able to handle event notifications
