--- a/bin/corridors/vehicle/nojournal/bin/supervisord.conf
+++ b/bin/corridors/vehicle/nojournal/bin/supervisord.conf
@@ -128,6 +128,7 @@ command=./M_SystemPerformanceDataCollector
 directory=/mmitss
 priority=5
 autostart=true
+stopsignal=INT
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
@@ -146,6 +147,16 @@ command=./M_SystemInterface
 directory=/mmitss
 priority=7
 autostart=true
+redirect_stderr=true          
+stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=0 
+
+[program: M_V2XDataCollector]
+command=./M_V2XDataCollector
+directory=/mmitss
+priority=8
+autostart=true
+stopsignal=INT
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
