--- a/bin/supervisord.conf
+++ b/bin/supervisord.conf
@@ -140,6 +140,15 @@ priority=8
 autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=0
+
+[program: M_V2XDataCollector]
+command=./M_V2XDataCollector
+directory=/mmitss
+priority=9
+autostart=true
+redirect_stderr=true          
+stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
 
 
