--- a/bin/corridors/Anthem_field/Daisy-Memorial/nojournal/bin/supervisord.conf
+++ b/bin/corridors/Anthem_field/Daisy-Memorial/nojournal/bin/supervisord.conf
@@ -174,6 +174,7 @@ command=./M_V2XDataCollector
 directory=/mmitss
 priority=12
 autostart=true
+stopsignal=INT
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
