Edits to supervisord.conf files to fix SI not stopping corectly. Also turning on console logging and autostarting TCI in anthem

--- a/bin/corridors/Anthem_field/Daisy-Meridian/nojournal/bin/supervisord.conf
+++ b/bin/corridors/Anthem_field/Daisy-Meridian/nojournal/bin/supervisord.conf
@@ -93,91 +93,94 @@ directory=/mmitss
 priority=1
 autostart=true
 redirect_stderr=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
+;stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=5MB
 
 [program: M_WirelessMsgDecoder]
 command=./M_WirelessMsgDecoder
 directory=/mmitss
-priority=3
+priority=2
 autostart=true
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB 
 
 [program: M_MsgEncoder]
 command=./M_MsgEncoder
 directory=/mmitss
-priority=4
+priority=3
 autostart=true
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB 
 
 [program: M_MapSpatBroadcaster]
 command=./M_MapSpatBroadcaster
 directory=/mmitss
-priority=5
+priority=4
 autostart=true
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB 
 
 [program: M_PriorityRequestSolver]
 command=./M_PriorityRequestSolver
 directory=/mmitss
-priority=6
+priority=5
 autostart=true
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB
 
 [program: M_PriorityRequestServer]
 command=./M_PriorityRequestServer
 directory=/mmitss
-priority=7
+priority=6
 autostart=true
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB 
 
 [program: M_TrafficControllerInterface]
 command=./M_TrafficControllerInterface
 directory=/mmitss
-priority=9
-autostart=false
+priority=7
+autostart=true
 stopsignal=INT
 redirect_stderr=true          
-stdout_logfile=/nojournal/bin/log/tciLog.txt        
+;stdout_logfile=/nojournal/bin/log/tciLog.txt 
+stdout_logfile_maxbytes=5MB        
 
 [program: M_SystemPerformanceDataCollector]
 command=./M_SystemPerformanceDataCollector
+directory=/mmitss
+priority=8
+autostart=true
+stopsignal=INT
+redirect_stderr=true          
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB 
+
+[program: M_SystemInterface]
+command=./M_SystemInterface
+directory=/mmitss
+priority=9
+autostart=true
+stopasgroup=true             ; send stop signal to the UNIX process group (default false)
+killasgroup=true             ; SIGKILL the UNIX process group (def false)
+redirect_stderr=true          
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB 
+
+[program: M_V2XDataCollector]
+command=./M_V2XDataCollector
 directory=/mmitss
 priority=10
 autostart=true
 stopsignal=INT
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
-
-[program: M_SystemInterface]
-command=./M_SystemInterface
-directory=/mmitss
-priority=11
-autostart=true
-redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
-
-[program: M_V2XDataCollector]
-command=./M_V2XDataCollector
-directory=/mmitss
-priority=12
-autostart=true
-stopsignal=INT
-redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB 
 
 ; The below sample eventlistener section shows all possible
 ; eventlistener subsection values, create one or more 'real'
