--- a/bin/corridors/vehicle/nojournal/bin/supervisord.conf
+++ b/bin/corridors/vehicle/nojournal/bin/supervisord.conf
@@ -75,7 +75,7 @@ serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 ;user=chrism                   ; setuid to this UNIX account to run the program
 ;redirect_stderr=true          ; redirect proc stderr to stdout (default false)
 ;stdout_logfile=/a/path        ; stdout log path, NONE for none; default AUTO
-;stdout_logfile_maxbytes=1MB   ; max # logfile bytes b4 rotation (default 50MB)
+;stdout_logfile_maxbytes=10MB   ; max # logfile bytes b4 rotation (default 50MB)
 ;stdout_logfile_backups=10     ; # of stdout logfile backups (default 10)
 ;stdout_capture_maxbytes=1MB   ; number of bytes in 'capturemode' (default 0)
 ;stdout_events_enabled=false   ; emit events on stdout writes (default false)
@@ -93,8 +93,8 @@ directory=/mmitss
 priority=1
 autostart=true
 redirect_stderr=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
+;stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=5MB     
 
 [program: M_WirelessMsgDecoder]
 command=./M_WirelessMsgDecoder
@@ -102,8 +102,8 @@ directory=/mmitss
 priority=2
 autostart=true
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB   
 
 [program: M_MsgEncoder]
 command=./M_MsgEncoder
@@ -111,8 +111,8 @@ directory=/mmitss
 priority=3
 autostart=true
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB  
 
 [program: M_PriorityRequestGenerator]
 command=./M_PriorityRequestGenerator
@@ -120,8 +120,8 @@ directory=/mmitss
 priority=4
 autostart=true
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB 
 
 [program: M_SystemPerformanceDataCollector]
 command=./M_SystemPerformanceDataCollector
@@ -130,8 +130,8 @@ priority=5
 autostart=true
 stopsignal=INT
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB
 
 [program: M_LightSirenStatusManager]
 command=./M_LightSirenStatusManager
@@ -139,17 +139,19 @@ directory=/mmitss
 priority=6
 autostart=true
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB 
 
 [program: M_SystemInterface]
 command=./M_SystemInterface
 directory=/mmitss
 priority=7
 autostart=true
+stopasgroup=true             ; send stop signal to the UNIX process group (default false)
+killasgroup=true             ; SIGKILL the UNIX process group (def false)
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB 
 
 [program: M_V2XDataCollector]
 command=./M_V2XDataCollector
@@ -158,8 +160,8 @@ priority=8
 autostart=true
 stopsignal=INT
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB 
 
 ; The below sample eventlistener section shows all possible
 ; eventlistener subsection values, create one or more 'real'
