--- a/bin/supervisord.conf
+++ b/bin/supervisord.conf
@@ -111,8 +111,8 @@ directory=/mmitss
 priority=4
 autostart=true
 redirect_stderr=true       
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+;stdout_logfile_maxbytes=0 
 
 [program: M_PriorityRequestServer]
 command=./M_PriorityRequestServer
@@ -120,8 +120,8 @@ directory=/mmitss
 priority=6
 autostart=true
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0   
+;stdout_logfile=/dev/fd/1        
+;stdout_logfile_maxbytes=0   
 
 [program: M_TrafficControllerInterface]
 command=./M_TrafficControllerInterface
@@ -130,8 +130,8 @@ priority=7
 stopsignal=INT
 autostart=true
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+;stdout_logfile_maxbytes=0 
 
 [program: M_SystemPerformanceDataCollector]
 command=./M_SystemPerformanceDataCollector
@@ -139,8 +139,8 @@ directory=/mmitss
 priority=8
 autostart=true
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0
+;stdout_logfile=/dev/fd/1        
+;stdout_logfile_maxbytes=0
 
 [program: M_V2XDataCollector]
 command=./M_V2XDataCollector
@@ -148,9 +148,19 @@ directory=/mmitss
 priority=9
 autostart=true
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+;stdout_logfile=/dev/fd/1        
+;stdout_logfile_maxbytes=0 
 
+;[program:M_SystemInterface]
+;command=./M_SystemInterface
+;directory=/mmitss
+;priority=10
+;autostart=false
+;redirect_stderr=true  
+;stopasgroup=true             ; send stop signal to the UNIX process group (default false)
+;killasgroup=true             ; SIGKILL the UNIX process group (def false)        
+;stdout_logfile=/dev/fd/1        
+;stdout_logfile_maxbytes=0 
 
 
 
