added a key PeerDataDecoding in each config file

--- a/bin/corridors/simulation-tools/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/simulation-tools/nojournal/bin/mmitss-phase3-master-config.json
@@ -12,7 +12,8 @@
     "VehicleType" : "Transit",
     "Logging" : "True",
     "SRMTimedOutTime" : 10.0,
-    "PortNumber":
+	"PeerDataDecoding": true,
+	"PortNumber":
 	{
 		"MessageTransceiver":
 		{
