--- a/bin/corridors/vehicle/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/vehicle/nojournal/bin/mmitss-phase3-master-config.json
@@ -15,6 +15,7 @@
 	"ScheduleExecutionBuffer": 1.0,
 	"SystemPerformanceTimeInterval": 300.0,
 	"ApplicationPlatform": "vehicle",
+	"PeerDataDecoding": true,
 	"PortNumber": {
 		"MessageTransceiver": {
 			"MessageSender": 10003,
