removed system-performance-data-collector from config files"

--- a/bin/corridors/simulation-tools/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/simulation-tools/nojournal/bin/mmitss-phase3-master-config.json
@@ -46,8 +46,7 @@
         "TrajectoryAware_MapEngineInterface": 20023,
         "MapEngine":20024,
 		"LightSirenStatusManager": 20025,
-		"PeerToPeerPriority": 20026,
-		"SystemPerformanceDataCollector": 20027
+		"PeerToPeerPriority": 20026
 	},
 	"psid": {
 		"map": "8002",
