updated docker files and added headers

--- a/bin/dockerfiles/arm/Dockerfile-mrp.arm
+++ b/bin/dockerfiles/arm/Dockerfile-mrp.arm
@@ -13,6 +13,7 @@ COPY MsgEncoder/arm/M_MsgEncoder /mmitss
 COPY MapSpatBroadcaster/arm/M_MapSpatBroadcaster /mmitss
 COPY SystemInterface/arm/M_SystemInterface /mmitss
 COPY V2XDataCollector/arm/M_V2XDataCollector /mmitss
+COPY V2XDataFtpClient/arm/M_V2XDataFtpClient /mmitss
 
 ENTRYPOINT ["/usr/bin/supervisord", "--configuration=/nojournal/bin/supervisord.conf"]
 
