--- a/bin/corridors/Anthem/Daisy-Anthem/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/Anthem/Daisy-Anthem/nojournal/bin/mmitss-phase3-master-config.json
@@ -109,5 +109,17 @@
 		"Latitude_DecimalDegree": 33.859902171595046,
 		"Longitude_DecimalDegree": -112.11197924116249,
 		"Elevation_Meter": 558
+	},
+	"DataTransfer": {
+		"FtpServerPort": 9090,
+		"StartTime": {
+			"Hour": 18,
+			"Minute": 30
+		},
+		"EndTime": {
+			"Hour": 19,
+			"Minute": 30
+		},
+		"MaxRetries": 3
 	}
 }
