--- a/bin/corridors/Anthem_field/Daisy-Memorial/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/Anthem_field/Daisy-Memorial/nojournal/bin/mmitss-phase3-master-config.json
@@ -109,5 +109,17 @@
 		"Latitude_DecimalDegree": 33.856549513795656,
 		"Longitude_DecimalDegree": -112.11421627029603,
 		"Elevation_Meter": 544
+	},
+	"DataTransfer": {
+		"FtpServerPort": 9090,
+		"StartTime": {
+			"Hour": 18,
+			"Minute": 30
+		},
+		"EndTime": {
+			"Hour": 19,
+			"Minute": 30
+		},
+		"MaxRetries": 3
 	}
 }
