--- a/bin/corridors/Anthem_field/Daisy-Meridian/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/Anthem_field/Daisy-Meridian/nojournal/bin/mmitss-phase3-master-config.json
@@ -109,5 +109,17 @@
 		"Latitude_DecimalDegree": 33.84694452633097,
 		"Longitude_DecimalDegree": -112.12212915024944,
 		"Elevation_Meter": 519
+	},
+	"DataTransfer": {
+		"FtpServerPort": 9090,
+		"StartTime": {
+			"Hour": 18,
+			"Minute": 30
+		},
+		"EndTime": {
+			"Hour": 19,
+			"Minute": 30
+		},
+		"MaxRetries": 3
 	}
 }
