--- a/bin/corridors/vehicle/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/vehicle/nojournal/bin/mmitss-phase3-master-config.json
@@ -109,5 +109,17 @@
 		"Latitude_DecimalDegree": 33.84293808964164,
 		"Longitude_DecimalDegree": -112.1351945016523,
 		"Elevation_Meter": 506
+	},
+	"DataTransfer": {
+		"FtpServerPort": 9090,
+		"StartTime": {
+			"Hour": 18,
+			"Minute": 30
+		},
+		"EndTime": {
+			"Hour": 19,
+			"Minute": 30
+		},
+		"MaxRetries": 3
 	}
 }
