--- a/bin/corridors/vehicle/nojournal/bin/supervisord.conf
+++ b/bin/corridors/vehicle/nojournal/bin/supervisord.conf
@@ -146,6 +146,16 @@ stdout_logfile_maxbytes=5MB
 [program: M_V2XDataCollector]
 command=./M_V2XDataCollector
 directory=/mmitss
+priority=5
+autostart=true
+stopsignal=INT
+redirect_stderr=true          
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB
+
+[program: M_DataCompressor]
+command=./M_DataCompressor
+directory=/mmitss
 priority=8
 autostart=true
 stopsignal=INT
