--- a/bin/corridors/Anthem_field/Daisy-Memorial/nojournal/bin/supervisord.conf
+++ b/bin/corridors/Anthem_field/Daisy-Memorial/nojournal/bin/supervisord.conf
@@ -172,6 +172,16 @@ redirect_stderr=true
 ;stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=5MB 
 
+[program: M_V2XDataFtpClient]
+command=./M_V2XDataFtpClient
+directory=/mmitss
+priority=11
+autostart=true
+stopsignal=INT
+redirect_stderr=true          
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB 
+
 ; The below sample eventlistener section shows all possible
 ; eventlistener subsection values, create one or more 'real'
 ; eventlistener: sections to be able to handle event notifications
