--- a/bin/corridors/Anthem_field/Daisy-Anthem/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/Anthem_field/Daisy-Anthem/nojournal/bin/mmitss-phase3-master-config.json
@@ -15,7 +15,7 @@
 	"ScheduleExecutionBuffer": 1.0,
 	"SystemPerformanceTimeInterval": 300.0,
 	"ApplicationPlatform": "roadside",
-	"PeerDataDecoding": true,
+	"PeerDataDecoding": false,
 	"PortNumber": {
 		"MessageTransceiver": {
 			"MessageSender": 10003,
