--- a/bin/corridors/speedway/speedway-mountain/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/speedway/speedway-mountain/nojournal/bin/mmitss-phase3-master-config.json
@@ -10,12 +10,12 @@
 	"MessageDistributorIP": "10.12.6.20",
 	"PriorityRequestGeneratorServerIP": "10.12.6.20",
 	"VehicleType": "Transit",
-	"Logging": "False",
+	"Logging": "True",
 	"SRMTimedOutTime": 10.0,
 	"ScheduleExecutionBuffer": 1.0,
 	"SystemPerformanceTimeInterval": 300.0,
 	"ApplicationPlatform": "roadside",
-	"PeerDataDecoding": true,
+	"PeerDataDecoding": false,
 	"PortNumber": {
 		"MessageTransceiver": {
 			"MessageSender": 10003,
@@ -114,11 +114,11 @@
 	"DataTransfer": {
 		"FtpServerPort": 9090,
 		"StartTime": {
-			"Hour": 18,
+			"Hour": 15,
 			"Minute": 30
 		},
 		"EndTime": {
-			"Hour": 19,
+			"Hour": 18,
 			"Minute": 30
 		},
 		"MaxRetries": 3
