--- a/bin/corridors/vehicle/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/vehicle/nojournal/bin/mmitss-phase3-master-config.json
@@ -11,11 +11,11 @@
 	"PriorityRequestGeneratorServerIP": "10.12.6.20",
 	"VehicleType": "Transit",
 	"Logging": "False",
-	"SRMTimedOutTime": 60.0,
+	"SRMTimedOutTime": 10.0,
 	"ScheduleExecutionBuffer": 1.0,
 	"SystemPerformanceTimeInterval": 300.0,
 	"ApplicationPlatform": "vehicle",
-	"PeerDataDecoding": true,
+	"PeerDataDecoding": false,
 	"PortNumber": {
 		"MessageTransceiver": {
 			"MessageSender": 10003,
